--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
-server:
-  port: 8080
-
 spring:
   application:
     name: api-gateway
+
+  config:
+    import: optional:configserver:${CONFIG_URI}
