--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.arka'
-version = '0.0.1-SNAPSHOT'
+version = '0.1.0-ALPHA'
 description = "Gateway service for routing and securing microservice requests in Arka's hardware distribution platform."
 
 java {
