--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,18 @@ spring:
 
   config:
     import: optional:configserver:${CONFIG_URI}
+
+## Se registra Eureka Client y Spring Security localmente ya que se inician antes que Config Server
+## haya resuelto la configuración de ambos, haciendo que las credenciales de Eureka Server y
+## Spring Security no esten disponibles al momento de usarlas.
+eureka:
+  client:
+    service-url:
+      defaultZone: http://${EUREKA_USERNAME}:${EUREKA_PASSWORD}@${EUREKA_URI}
+    register-with-eureka: true
+    fetch-registry: true
+
+security:
+  jwt:
+    key: ${JWT_KEY}
+    user: ${JWT_USER}
