--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ ext {
 dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway-server-webflux'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+	implementation 'org.springframework.cloud:spring-cloud-starter-config'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
+	implementation 'io.netty:netty-resolver-dns-native-macos:4.1.107.Final:osx-aarch_64'
 	implementation "org.springframework.boot:spring-boot-starter-security"
 	implementation 'com.auth0:java-jwt:4.5.0'
 	compileOnly 'org.projectlombok:lombok:1.18.30'
