--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: api-gateway
 
   config:
-    import: optional:configserver:${CONFIG_URI}
+    import: optional:configserver:http://${CONFIG_USERNAME}:${CONFIG_PASSWORD}@${CONFIG_URI}
 
 ## Se registra Eureka Client y Spring Security localmente ya que se inician antes que Config Server
 ## haya resuelto la configuración de ambos, haciendo que las credenciales de Eureka Server y
@@ -19,3 +19,7 @@ security:
   jwt:
     key: ${JWT_KEY}
     user: ${JWT_USER}
+
+logging:
+  level:
+    org.springframework.cloud.config: DEBUG
